Cambios sitio web

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola a todos este es mi sitio Web
+        Hola a todos este es mi sitio Web, pronto sera un super sitio 
     </p>
 </body>
 </html>
